[package]
name = "rusqttbom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1.15.0", features = ["full"] } # for our async runtime
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
error-chain = "0.12.4"
string = "0.3.0"
