[package]
name = "rusqttbom"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] } 
tokio = { version = "1.15.0", features = ["full"] } 
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
error-chain = "0.12.4"
string = "0.3.0"
toml = "0.5.10"
rumqttc = "0.19.0"
